@@ -8,6 +8,9 @@
 * Bug Fixes
   * Use exit!(0) instead of exit! in god binary to exit with code 0 (instead of default -1)
   * Command line group control fixed
+  * Add :notify_when_flapping behavior to check for oscillation [kevinclark]
+  * Add :degrading_lambda condition. [kevinclark]
+    It uses a decaying interval (1/2 rate) for 3 cycles before failing.
 
 == 0.3.0 / 2007-08-17
 
